[package]
name = "monte"
description = "Replay your datasets."
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/jjmarchewitz/monte"
documentation = "https://github.com/jjmarchewitz/monte"
repository = "https://github.com/jjmarchewitz/monte"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
