[metadata]
name = monte
description = Our personal algorithmic trading experimentation grounds
author = Jake Marchewitz
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    algorithms
    derived_columns
    monte

install_requires =
    aiohttp
    alpaca-trade-api==2.1.0
    alpaca-py==0.6.1
    jupyter
    matplotlib
    pandas
    scikit-learn
    scipy
    snakeviz
    Sphinx
    sphinx-rtd-theme
    xlsxwriter

    asks
    trio

python_requires = >=3.10
zip_safe = no