[metadata]
name = monte
version = 0.0.0.dev1
description = Simulates the stock market using historical data to aid in the development of trading algorithms
author = Jake Marchewitz
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    algorithms
    derived_columns
    monte

install_requires =
    aiohttp
    alpaca-trade-api==2.1.0
    alpaca-py==0.6.1
    jupyter
    matplotlib
    pandas
    scikit-learn
    scipy
    snakeviz
    Sphinx
    sphinx-rtd-theme
    tabulate
    xlsxwriter

    asks
    trio

python_requires = >=3.9
zip_safe = no