[package]
version = "0.1.4"
name = "monte"
authors = ["Jake Marchewitz <jakemarchewitz@gmail.com>"]
description = "Fundamental operations for scientific computing directly with Polars"
categories = ["mathematics", "science", "simulation"]
keywords = ["polars", "sklearn", "scikit-learn", "scipy", "machine-learning"]
edition = "2021"
readme = "../README.md"
repository = "https://github.com/monte-rs/monte"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# TODO: add a bunch of opt-in features that keep compile time low

[dependencies]
chrono = "0.4"
csv = "1.2.1"
monte-core = { path = "../monte-core" }
polars = { version = "0.28", features = [] }
rayon = "1.7"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = "1.28"
