[package]
name = "download-into-dataframe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.56"
quote = "1.0.27"
syn = { version = "2.0", features = ["derive"] }
darling = "0.20.1"
polars = "0.29.0"
polars-core = "0.29.0"
